--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <body>
     <div>
         <img class="titleIMG" src="Structure/KWS.png">
-        <img src="Structure/logo.png" style="width: 15%; padding-top: 2vw; padding-right: 15%;" align="right">
+        <img src="Structure/Logo.png" style="width: 15%; padding-top: 2vw; padding-right: 15%;" align="right">
     </div>
     <p></p>
     <p></p>
