--- a/Portfolio.html
+++ b/Portfolio.html
@@ -119,7 +119,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <a href="Index.html">
+    <a href="index.html">
         <img style="width: 50%; padding-top: 2vw; padding-left: 7%;" src="Structure/KWS.png">
     </a>
     <br>
