--- a/Portfolio.html
+++ b/Portfolio.html
@@ -130,15 +130,15 @@
     <br>
     <br>
     <div class="row">
-        <img src="assets/Artboard 1.png" style="width:31%">
-        <img src="assets/350image.png" style="width:31%">
-        <img src="assets/GansRubicsCube.png" style="width:31%">
-        <img src="assets/Cancerthing.png" style="width:31%">
-        <img src="assets/Earth.png" style="width:31%">
-        <img src="assets/cor2.png" style="width:31%">
-        <img src="assets/OpticalIllusion.jpg" style="width:31%">
-        <img src="assets/ToonDragonFly.png" style="width:31%">
-        <img src="assets/untitled.png" style="width:31%">
+        <img src="Assets/Artboard 1.png" style="width:31%">
+        <img src="Assets/350image.png" style="width:31%">
+        <img src="Assets/GansRubicsCube.png" style="width:31%">
+        <img src="Assets/Cancerthing.png" style="width:31%">
+        <img src="Assets/Earth.png" style="width:31%">
+        <img src="Assets/cor2.png" style="width:31%">
+        <img src="Assets/OpticalIllusion.jpg" style="width:31%">
+        <img src="Assets/ToonDragonFly.png" style="width:31%">
+        <img src="Assets/untitled.png" style="width:31%">
     </div>
     <p style="text-align: center;"> much more, these are just my personal favorites!</p>
     <br>
@@ -150,10 +150,10 @@
     </div>
     <br>
     <br>
-    <img src="assets/Concept.png" style="width:95%; padding-left:2.5%;">
+    <img src="Assets/Concept.png" style="width:95%; padding-left:2.5%;">
     <br>
     <br>
-    <img src="assets/RigConcept.gif" style="padding-left:40%; width:20%;">
+    <img src="Assets/RigConcept.gif" style="padding-left:40%; width:20%;">
     <br>
     <br>
     <h1 style="text-align:center; font-size:500%">360° Hue Project</h1>
