--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
 
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="KensworthStudios, kensworth, Kensworth Studio, Kensworth Studios, US, USA, studio">>
+    <meta name="description" content="Kensworth Studio is a frelancing service by Kenny DeLangis. 3D modeling, Websites, Concept art, GameDev, Artist">
 </head>
 <body>
     <div>
