--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </div>
         <div class="carddeal">
             <div class="experince">
-                <div style="margin-left: 3vw;">Experince</div>
+                <div style="margin-left: 3vw;">Experience</div>
                 <div class="aboutC">
                     <img src="Structure/3DModelingxp.png" class="cardA">
                     <img src="Structure/Adobe.png" class="cardB">
